no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -20,54 +20,58 @@ import "IMPORT_PATH"              #"IMPORT_PATH" locates the PACKAGE on the file
                                   #By convention, DIR name should be same as PACKAGE
                                   #Relative to:
                                   #  - GOROOT/src: for standard library
-                                  #  (if start with . or .., unless module-aware)
+                                  #  (if module-aware, and URI)
+                                  #  - GOPATH/pkg/mod
+                                  #  (if non-module-aware)
+                                  #  - GOPATH/src
+                                  #  (if non-module-aware, and start with . or ..)
                                   #  - $PWD
-                                  #     - what about non-module-aware???
-                                  #        - including absolute PATH???
-                                  #        - not if go build|run DIR???
-                                  #  (if URI and module-aware)
-                                  #  - GOPATH/pkg/mod: for user libraries
-                                  #  (if not module-aware)
-                                  #  - GOPATH/src: for user libraries
-GOROOT                            #Global go directory.
+ENVVAR GOROOT                     #Global go directory.
                                   #Contains:
-                                  #  - bin/: binaries (go|gofmt)
-                                  #  - src/: standard library
+                                  #  - binaries (go|gofmt)
+                                  #  - standard library
                                   #  - documentation
-                                  #By priority:
-                                  #  - ENVVAR GOROOT
-                                  #  - /usr/local/go
+                                  #Directory structure is non-module-aware one.
+                                  #Default: /usr/local/go
                                   #Same directory structure as GOPATH
-GOPATH                            #By priority:
-                                  #  - ENVVAR GOPATH
-                                  #     - must be absolute
-                                  #     - same syntax as PATH (:-separated on Unix, ;-separated on Windows)
-                                  #     - on write, only first element is used
-                                  #     - usually, having several elements is not needed
-                                  #  - ~/go/
+ENVVAR GOPATH                     #Same syntax as PATH (:-separated on Unix, ;-separated on Windows)
+                                  #  - on write, only first element is used
+                                  #  - usually, having several elements is not needed
+                                  #Must be absolute
+                                  #Default: ~/go/
                                   #Directory structure:
                                   #  - bin/BINARY: binaries, i.e. compiled main PACKAGEs
                                   #  (module-aware)
                                   #  - pkg/mod/IMPORT_PATH@vMODULE_VERSION/*.go: source code
                                   #  (non-module-aware, or standard library)
                                   #  - src/IMPORT_PATH/*.go: source code
-                                  #  (non module-aware)
+                                  #  (non-module-aware)
                                   #  - pkg/GOOS_GOARCH/IMPORT_PATH/*.a: compiled non-main PACKAGEs
-GOBIN                             #Userland binaries directory
+ENVVAR GOBIN                      #Userland binaries directory
                                   #Should add both GOBIN and GOROOT/bin to $PATH
-                                  #By priority:
-                                  #  - ENVVAR GOBIN (must be absolute)
-                                  #  - GOPATH/bin
-BINARY INSTALLATION ==>           #During go install, if main PACKAGE:
+                                  #Must be absolute
+                                  #Def: GOPATH/bin
+BINARY INSTALLATION ==>           #During go install:
+                                  #  - if main PACKAGE
                                   #  - moved to GOBIN/BINARY
-                                  #  - BINARY is main PACKAGE's DIR name
-                                  #By convention:
-                                  #  - (preferred) in REPO_ROOT/cmd/BINARY/
-                                  #  - in REPO_ROOT
+                                  #     - BINARY is main PACKAGE's DIR name
+                                  #By convention, main package DIR should be:
+                                  #  - (preferred) REPO_ROOT/cmd/BINARY/
+                                  #  - REPO_ROOT
 
-MODULE_PATH                       #Beginning of IMPORT_PATH, to locate MODULE.
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          MODULE PATH          :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+MODULE_PATH                       #Beginning of IMPORT_PATH.
+                                  #Where MODULE is located.
                                   #If standard library: ""
-REPO_PATH                         #End of IMPORT_PATH, to locate PACKAGE within MODULE.
+REPO_PATH                         #End of IMPORT_PATH.
+                                  #PACKAGE path within MODULE.
                                   #If single PACKAGE: often "", i.e. top-level inside repository.
 
 MODULE_VERSION                    #MODULE version, by priority order:
@@ -124,10 +128,10 @@ go install "IMPORT_PATH"          #If module-aware:
                                   #  - Fetch module over the network
                                   #  - Retrieve MODULE_VERSION
                                   #  - Copy source locally to GOPATH/pkg/mod/IMPORT_PATH@vMODULE_VERSION
-                                  #If not module-aware:
+                                  #If non-module-aware:
                                   #  - Take local source from GOPATH/src/IMPORT_PATH
                                   #  - Build binaries to GOPATH/pkg/GOOS_GOARCH/IMPORT_PATH/*.a
-                                  #Compile main PACKAGE to GOPATH/bin/BINARY
+                                  #Compile main PACKAGE to GOBIN/BINARY
                                   #Add `require MODULE_PATH MODULE_VERSION ...` to go.mod
                                   #  - Modify go.sum too
                                   #If module-aware:
