no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -443,13 +443,13 @@ VAL |> VAL2                  (bl)*#    or '|>'
 
 VAR = += -= *= /= **= %= <<= >>=  #Child of EXPR, type 'AssignmentExpression':
 >>>= |= ^= &= VAL                 #  - operator '=|+=|-=|*=|/=|**=|%=|<<=|>>=|>>>=||=|^=|&='
-VAR &&= ||= ??= VAL         (aebl)#    or '&&=|||=|??='
+VAR &&= ||= ??= VAL        (aetbl)#    or '&&=|||=|??='
                                   #  - left PATTERN or (only on older JavaScript engines) EXPR
                                   #  - right EXPR
 
 VAL || && VAL2                    #Child of EXPR, type 'LogicalExpression':
                                   #  - operator '|||&&'
-VAL ?? VAL2                 (aebl)#   or '??'
+VAL ?? VAL2                (aetbl)#   or '??'
                                   #  - left EXPR
                                   #  - right EXPR
 
