--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.4.0
+VERSION ==>                       #7.5.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1873,6 +1873,7 @@ sort-imports [OBJ]                #Sort import declarations according to 
                                   #  - ignoreMemberSort BOOL: if false (def), must also alphabetically sort VARs in
                                   #    import { VAR, ... } from 'MDL'
                                   #  - ignoreDeclarationSort BOOL: same for import 'MDL'
+                                  #  - allowSeparatedGroups BOOL (def: false): only sort imports if consecutive with no black line or comment in-between
 node/no-mixed-requires [OBJ]      #Must group top-level declarations into groups:
                                   #  - core modules
                                   #  - local module
