no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.5.0 (current), 13.14.0 (current), 12.18.2 (active LTS), 10.21.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.6.0 (current), 13.14.0 (current), 12.18.3 (active LTS), 10.22.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -518,9 +518,9 @@ MODULE.exports                                  #Reference to exports.
 
 module                                          #Current MODULE, i.e. file being loaded.
                                                 #There are builtin modules, which are the chapters of this doc.
-MODULE.parent|children                          #MODULE[_ARR]|null
 require.main                                    #Root file (first to have been loaded) MODULE
 process.mainModule                              #Same but updated if root file changed at runtime
+MODULE.children                                 #MODULE[_ARR]|null
 
 MODULE.loaded                                   #False for the first time the file is loaded (i.e. sync)
                                                 #True for async functions
@@ -1329,8 +1329,6 @@ TCPSOCKET.setNoDelay(BOOL)->TCPSOCKET           #If false (def), use buffers:
                                                 #  - more efficient when using a lot of small requests, but can delay them
                                                 #  - even disabled, underlying IOSTREAM still use buffer to keep up with
                                                 #    high demand
-TCPSOCKET.bufferSize                            #Currently buffered size.
-                                                #If ever growing, should use pause|resume()
 TCPSOCKET.bytesRead|Written                     #So far
 
 TCPSOCKET.address()->OBJ                        #Like TCPSERVER
@@ -1847,8 +1845,8 @@ lookupService
 (IP, PORT, FUNC(ERROR, 'HOST', 'SCHEME'))       #
 
 new Resolver([OPTS])                            #RESOLVER
-                                             14*#OPTS:
-                                             14*#  - timeout NUM (-1 for def) (in ms)
+                                             12*#OPTS:
+                                             12*#  - timeout NUM (-1 for def) (in ms)
                                                 #In following methods, if RESOLVER is missing, use builtin RESOLVER
 [RESOLVER.]resolve
  ('HOST'[, STR2], FUNC(ERROR, VAL_ARR))         #Same as lookup() but STR2 can any PTR record type: "A" (def), "AAAA", "MX", "TXT", "SRV", "PTR", "NS", "CNAME", "SOA", "NAPTR" or "ANY" (guesses)
@@ -2852,6 +2850,7 @@ new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH'
                                              12*#        - maxYoungGenerationSizeMb NUM: recently created objects heap max size
                                              12*#        - codeRangeSizeMb NUM: code max size
                                              12*#        - stackSizeMb NUM (def: 4): stack max size
+                                             14*#  - trackUnmanagedFds BOOL (def: false): on exit, automatically call any FD_INT if FS.close() was not called
 
 global.*                                        #In worker, like in parent except process.*:
                                                 #  - exit() affects current thread not current process
@@ -2953,6 +2952,9 @@ createContext([CONT_OBJ][, CONT_OPTS])->COBJ    #COBJ is an OBJ with some hidden
                                                 #  - codeGeneration:
                                                 #     - strings BOOL (def: true): if false, throws on eval() or derivatives (new Function(...), etc.)
                                                 #     - wasm BOOL (def: true): if false, throws when trying to compile WASM
+                                             14*#  - microtaskMode STR (def: nothing): if 'afterEvaluate':
+                                             14*#     - wait for current macrotask to complete, i.e. all microtasks done
+                                             14*#     - RUN_OPTS.timeout|breakOnSigint will work microtask-wise, not macrotask-wise
 isContext(COBJ)->BOOL                           #Returns true if COBJ
 
 runInContext(STR, COBJ[, RUN_OPTS])             #Like eval() but use context COBJ as unique global environment:
