no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -640,6 +640,9 @@ PACKAGE.exports[.CONDITION].PATH             12*#'PATH2'. Like PACKAGE.exports[.
                                              12*#     - including PACKAGE.exports {}
                                              12*#     - including PACKAGE.exports false
 
+PACKAGE.imports[.CONDITION].#PATH            14*#PATH2. Remaps import "PATH[...]" to "PATH2[...]"
+                                             14*#Same PATH syntax as PACKAGE.exports[.CONDITION].PATH
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -1396,6 +1399,9 @@ TLS.createSecureContext(OBJ)->SECURECONTEXT     #OBJ:
                                                 #     - defaults to "*AES*:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!SRP:!CAMELLIA"
                                                 #     - AES are in order: 128 > 256, SHA384 > SHA256, ECDHE > DHE, RSA > ECDSA
                                              12*#  - sigalgs 'STR:...': same for signature algorithms
+                                                #  - sessionTimeout (def: 300, in sec): expiration for TLS identifiers and session tickets
+                                                #  - ticketKeys BUFFER: 48 bytes divided in three 16 bytes parts: prefix, HMAC, AES key
+                                                #     - can use TLSSERVER.getTicketKeys()->BUFFER and TLSSERVER.setTicketKeys(BUFFER)
                                                 #  - sessionIdContext STR:
                                                 #     - STR concatened in front of SSL session ID.
                                                 #     - if requestCert is true, it is a MD5 nonce. Otherwise, it is "".
@@ -1439,9 +1445,6 @@ createServer(OBJ[, FUNC(TLSSOCKET)])->TLSSERVER #OBJ:
                                                 #     - when client asks for SNI, calls it with requested server 'HOST'
                                                 #        - if success, must call FUNC(null, OBJ2), where OBJ2 is TLSSOCKET.secureContext
                                                 #     - can also use TLSSERVER.addContext('HOST', SECURECONTEXT)
-                                                #  - sessionTimeout (def: 300, in sec): expiration for TLS identifiers and session tickets
-                                                #  - ticketKeys BUFFER: 48 bytes divided in three 16 bytes parts: prefix, HMAC, AES key
-                                                #     - can use TLSSERVER.getTicketKeys()->BUFFER and TLSSERVER.setTicketKeys(BUFFER)
                                                 #FUNC is 'secureConnection' event handler
 TLSSERVER.setSecureContext(OBJ)              11*#OBJ: any SECURECONTEXT.* property
 TLSSERVER.on("secureConnection",FUNC(TLSSOCKET))#Like TCPSERVER.on("connection"), but for SSL.
